# agriculture_bot

./: Dockerfile  Dockerfile.dockerfile  README.md  run.sh
humble_ws/src/navigation/: CMakeLists.txt  package.xml  setup.py
humble_ws/src/navigation/launch/: global_navigation.launch.py  isaacsim_navigation.launch.py  isaacsim_visual_navigation.launch.py  navigation.launch.py  visual_navigation.launch.py
humble_ws/src/navigation/maps/: carter_outdoor_navigation.yaml  extended_outdoor_navigation.yaml
humble_ws/src/navigation/navigation/: navigate_through_poses.py  navigate_to_pose.py
humble_ws/src/navigation/params/: global_navigation_params.yaml  goals.txt  isaacsim.yaml
humble_ws/src/navigation/rviz2/: global_navigation.rviz
humble_ws/src/perception/: package.xml  setup.py
humble_ws/src/perception/perception/: hsv_threshold.py  local_visual_navigation.py  visual_servoing.py
